Bug 111824 - Export to xlsx handles "deep" axis wrong in 3D column chart
Summary: Export to xlsx handles "deep" axis wrong in 3D column chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2017-08-15 20:54 UTC by Regina Henschel
Modified: 2019-06-19 09:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
3D column chart with colored axes (14.04 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-08-15 20:54 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-08-15 20:54:31 UTC
Created attachment 135563 [details]
3D column chart with colored axes

Open attached document in LibreOffice and examine the chart. It has the labels ">24°" and "<10°" on the "deep" (=z) axis.

Export the file to xlsx, try both OOXML and MS format.

Open the file in Excel. I have tried Excel 2010 here.

Notice that the "deep" axis has wrong labels.
Go to the "Axis" tool in Excel. Notice, that there are only two axes, the "deep" axis is missing. Only if you apply the Charttyp "3D column chart, deep" in Excel again, you get back the third axis.
Comment 1 Jacques Guilleron 2017-08-16 13:59:20 UTC
Hi Regina,

Reproduced  too by saving the file with xlsx suffix with
LO 6.0.0.0.alpha0+ Build ID: 88179e3de8865ea07d5017ca0723afd10ad44ba7
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-06_23:49:25
Locale: fr-FR (fr_FR); Calc: group
and opened it with 
Microsoft Excel Starter 2010.
I get the depth again after the same steps.
Comment 2 QA Administrators 2018-08-17 02:38:09 UTC Comment hidden (obsolete)
Comment 3 Jacques Guilleron 2018-08-17 15:57:38 UTC
Reproduced with
LO 6.2.0.0.alpha0+ Build ID: 7e65a0794b7c57210779bb9a6d1f2b2e49eb86e9
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-30_23:37:44
Locale: fr-FR (fr_FR); Calc: CL
Comment 4 Commit Notification 2019-06-18 10:57:14 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1b26a6e7a4e3865d1555fa0612845c765b114b49%5E%21

tdf#111824 Chart OOXML Export: fix Z axis labels

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-06-19 09:30:39 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/21be3e19d84a88224ed7e3825b6e39c7ad0b17c2%5E%21

tdf#111824 Chart OOXML Export: fix Z axis labels

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.