tdf#111824 Chart OOXML Export: fix Z axis labels

Export 3D barchart Z ("deep") axis properties into
<serAx> xml tag, as the OOXML Standard requires.

Change-Id: I8ee2282a28e9b4bdea6e96c96256f832b1a1aada
Reviewed-on: https://gerrit.libreoffice.org/74170
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>